# connect4

./: .env.example  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
backend/: .env.docker  .env.example  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  pyproject.toml
backend/src/: constants.py  core.py  exceptions.py  main.py  models.py
backend/src/api/: crud.py  models.py  shortcuts.py  validators.py  views.py  websocket.py
backend/src/db/: client.py  utils.py
backend/tests/: test_core.py
frontend/: .env.example  Dockerfile  README.md  package-lock.json  package.json  prettier.config.js  tailwind.config.ts  tsconfig.json
frontend/src/: constants.tsx
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/games/: page.tsx
frontend/src/app/games/[id]/: layout.tsx  page.tsx
frontend/src/app/games/[id]/join/: page.tsx
frontend/src/app/games/join/[token]/: page.tsx
frontend/src/components/: buttons.tsx  input.tsx  theme-button.tsx
frontend/src/utils/: localStorageUtils.ts
src/: constants.py  core.py  main.py
src/api/: crud.py  models.py  views.py  websocket.py
src/connect4/: settings.py
src/db/: client.py  utils.py
tests/: test_core.py
