[tool.poetry]
name = "connect4"
version = "0.1.0"
description = ""
authors = ["Yurii Kosiv <yurdosii.ksv@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.103.2"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
motor = {extras = ["srv"], version = "^3.3.2"}
motor-types = "^1.0.0b3"
pydantic-settings = "^2.0.3"

[tool.poetry.group.dev.dependencies]
mypy = "^1.6.0"
pre-commit = "^3.5.0"
pytest = "^7.4.2"
codespell = "^2.2.6"
ruff = "^0.1.3"

[tool.ruff]
line-length=79
target-version = 'py312'

[tool.ruff.lint]
select = [
  # Pyflakes
  "F",
  # pycodestyle
  "E4",
  "E7",
  "E9",
  # isort
  "I",
  # pep8-naming
  "N",
]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "./src/"
allow_untyped_globals = true
check_untyped_defs = true
disallow_any_decorated = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
ignore_missing_imports = false
show_error_codes = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["tests.*"]
ignore_errors = true

[[tool.mypy.overrides]]
module = ["pydantic_mongo.*"]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
